fixed uneven padding of nav-bar links, centered text

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,15 +1,14 @@
-
 #index-container {
 margin-left: 29px;
 height: 800px;
-width: 1202px;
+width: 1850px;
 }
 
 .popular {
 float: left;
 margin: 65px;
 margin-top: 10px;
-margin-left: 125px;
+margin-left: 400px;
 text-align: center;
 }
 
@@ -17,7 +16,7 @@ text-align: center;
 float: right;
 margin: 75px;
 margin-top: 10px;
-margin-right: 125px;
+margin-right: 400px;
 text-align: center;
 }
 
@@ -25,7 +24,7 @@ text-align: center;
 height: 50px;
 width: 100%;
 background-color: #333;
-margin-top: 200px;
+margin-top: 300px;
 }
 
 #canvas-partial-box{
